[gd_scene load_steps=11 format=3 uid="uid://bes2p46skt65p"]

[ext_resource type="Script" uid="uid://d1lq0t6obrcmi" path="res://entities/skeleton.gd" id="1_4oc3b"]
[ext_resource type="Texture2D" uid="uid://ctj108af27qan" path="res://sprites/3 - Skeleton/Design_sem_nome__1_-removebg-preview.png" id="2_yag7t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fpmxe"]
atlas = ExtResource("2_yag7t")
region = Rect2(204, 0, 204, 408)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oc3b"]
atlas = ExtResource("2_yag7t")
region = Rect2(0, 0, 204, 408)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr2a"]
atlas = ExtResource("2_yag7t")
region = Rect2(0, 0, 204, 408)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31jw"]
atlas = ExtResource("2_yag7t")
region = Rect2(204, 0, 204, 408)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6xw"]
atlas = ExtResource("2_yag7t")
region = Rect2(408, 0, 204, 408)

[sub_resource type="SpriteFrames" id="SpriteFrames_yag7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpmxe")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oc3b")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6xw")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpmxe"]
radius = 11.0
height = 52.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yag7t"]
size = Vector2(47, 18.5)

[node name="carrapato" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_4oc3b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.26508886, 0.12601294)
sprite_frames = SubResource("SpriteFrames_yag7t")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_fpmxe")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1.5, 1.75)
shape = SubResource("RectangleShape2D_yag7t")
debug_color = Color(0.967938, 0, 0.471078, 0.42)

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(1, 13)
target_position = Vector2(11, 0)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(11, 0)
target_position = Vector2(0, 19)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(0, 13)
target_position = Vector2(89, 0)
collision_mask = 2

[node name="BoneStartPosition" type="Node2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
